--- a/.github/workflows/promptdiscussion.yml
+++ b/.github/workflows/promptdiscussion.yml
@@ -43,7 +43,8 @@ jobs:
     steps:
       - name: Fetch Labels
         id: fetch-labels
-        uses: ./actions/labelsworkflow/labelsaddition
+        uses: ./.github/actions/labelsworkflow/labelsaddition
+
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
