--- a/.github/workflows/promptdiscussion.yml
+++ b/.github/workflows/promptdiscussion.yml
@@ -56,6 +56,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: [get_info, Get_Labels]
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+        
       - name: conditional test
         run: echo "hello team"
 
