--- a/actions/labelsworkflow/labelsaddition/action.yml
+++ b/actions/labelsworkflow/labelsaddition/action.yml
@@ -1,5 +1,9 @@
 name: Get Labels Action
 description: Fetches labels from a GitHub repository
+input:
+  PAT:
+    description: "GitHub repository token"
+    required: true
 runs:
-  using: 'node12'
+  using: 'node16'
   main: 'index.js'
